--- a/includes/navbar.html
+++ b/includes/navbar.html
@@ -1,22 +1,33 @@
-<div id="menu-bar" class="fas fa-bars"></div>
-<a href="index.php" class="logo"><img src="Assets/logo cpt.png" alt="" /></a>
-<!-- NavBar Start -->
-<div class="navbar">
-  <a href="#home"></a>
-  <a href="index.php#quiSommeNous">QUI SOMMES-NOUS</a>
-  <div class="dropdown aboutUs-dropdown">
-    <a href="index.php#quiSommeNous">QUI SOMMES-NOUS</a>
-    <a href="apropos.php">A propos</a>    <a href="notre-missoion.php">Notre Mission</a>
-    <a target="_blank" href="formulaire.php">Adeherer au CPTM</a>
-    
+<header>
+  <div class="navbar-container">
+    <a href="index.php" class="logo">
+      <img src="Assets/logo cpt.png" alt="CPTM Logo">
+    </a>
+
+    <ul class="nav-links">
+      <li> 
+        <a href="#" class="has-dropdown">QUI SOMMES-NOUS</a>
+        <ul class="dropdown">
+          <li><a href="index.php#quisomenous">QUI SOMMES-NOUS</a></li>
+          <li><a href="apropos.php">À propos</a></li>
+          <li><a href="notre-missoion.php">Notre Mission</a></li>
+          <li><a target="_blank" href="formulaire.php">Adhérer au CPTM</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#" class="has-dropdown">NOS OUTILS</a>
+        <ul class="dropdown">
+          <li><a target="_blank" href="https://visitmidelt.com/">Visit Midelt</a></li>
+          <li><a href="infoPratique.php">Informations Pratiques</a></li>
+        </ul>
+      </li>
+      <li><a href="contact_hotel.php">CONTACTEZ HÔTEL</a></li>
+      <li><a href="contacter-nous.php">CONTACTEZ NOUS</a></li>
+      <li><a href="events.php">ÉVÉNEMENTS</a></li>
+    </ul>
+
+    <div class="hamburger">
+      <i class="fas fa-bars"></i>
+    </div>
   </div>
-  <a href="#no-outils">NOS OUTILS</a>
-  <div class="dropdown no-outils-dropdown">
-    <a target="_blank" href="https://visitmideltmorocco.com/">Visit Midelt</a>
-    <a href="infoPratique.php">Informations Pratiques</a>
-  </div>
-  <a href="contact_hotel.php">CONTACTEZ HOTEL</a>
-  <a href="contacter-nous.php">CONTACTEZ NOUS</a>
-  <a href="events.php">EVENEMENTS</a>
-</div>
-<!-- NavBar End -->
+</header>
