--- a/css/footer.css
+++ b/css/footer.css
@@ -73,6 +73,10 @@ footer {
   border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
+.footer-bottom p{
+  color: var(--white);
+}
+
 .footer-bottom p {
   font-size: 1.6rem;
 }
