--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Fichier CSS : css/style.css */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"); */
   
     :root {
       --primary: #15803d;
