--- a/includes/footer.html
+++ b/includes/footer.html
@@ -17,10 +17,10 @@
       <div class="footer-col">
         <h3>Liens rapides</h3>
         <a href="#home">Accueil</a>
-        <a href="#about">Qui sommes-nous</a>
-        <a href="#gallery">Galerie</a>
-        <a href="#hotels">Hôtels</a>
-        <a href="#events">Événements</a>
+        <a href="#quisommenous">Qui sommes-nous</a>
+        <a href="formulaire.php">Adhérer au CPTM</a>
+        <a href="contact_hotel.php">Hôtels</a>
+        <a href="events.php">Événements</a>
       </div>
       
       <div class="footer-col">
@@ -41,7 +41,7 @@
     </div>
     
     <div class="footer-bottom">
-      <p>&copy; 2023 CPTM Midelt. Tous droits réservés.</p>
+      <p>&copy; 2025 CPTM Midelt. Tous droits réservés.</p>
     </div>
   </div>
 </footer>
